# kint

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  alembic.ini  docker-compose.yml  ecosystem.config.js  pyproject.toml
.agents/workflows/: new-endpoint.md  new-model.md  new-page.md  review.md
.github/agents/: architect.agent.md  backend.agent.md  database.agent.md  devops.agent.md  frontend.agent.md  nfc.agent.md  reviewer.agent.md
.github/instructions/: docker-conventions.instructions.md  (+4 more)
alembic/: env.py
docs/: admin-attendance-design.md  api-contract.openapi.yaml  architecture.md  attendance-correction-design.md  attendance_guide.md  attendance_rules.md  database-design.md  deploy.md  development-guide.md  gsi-auth-design.md  implementation-plan.md  mypage-design.md  settings-design.md  settings_guide.md  shift-calendar-design.md  specification.md  user_management_guide.md
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
frontend/src/: App.css  (+3 more)
nginx/: kint.conf
tests/: conftest.py  test_admin_user_card.py  test_attendance_admin_ops.py  test_attendance_alerts.py  test_attendance_auto_complete.py  test_attendance_correction.py  test_attendance_import_csv.py  test_attendance_summary.py  test_attendance_work_time.py  test_calendar_sync.py  test_me.py  test_monthly_attendance_report.py  test_notification.py  test_punch_device.py  test_punch_rules.py  test_punch_user_search.py  test_settings.py  test_settings_backup.py  test_user_backup.py  test_user_hard_delete.py
(+133 files in other folders)
